[package]
name = "goose"
version = "0.19.0-dev"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2024"
description = "A load testing framework inspired by Locust."
homepage = "https://tag1.com/goose"
documentation = "https://book.goose.rs"
repository = "https://github.com/tag1consulting/goose"
readme = "README.md"
keywords = ["loadtesting", "performance", "web", "framework", "tool"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"
downcast-rs = "2.0"
flume = "0.12"
futures = "0.3"
gumdrop = "0.8"
http = "1.1"
itertools = "0.14"
lazy_static = "1.4"
log = "0.4"
num-format = "0.4"
rand = "0.9"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "default-tls",
    "form",
    "gzip",
    "json",
] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_json = "1.0"
simplelog = "0.12"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = "0.28"
url = "2"
headless_chrome = { version = "1.0", features = ["fetch"], optional = true }
urlencoding = { version = "2.1", optional = true }

[features]
# Include cookies by default for backward compatibility and expected behavior in web load testing
default = ["cookies"]
# reqwest >==0.13 already defaults to rustls
rustls-tls = ["tokio-tungstenite/rustls"]
# Cookie support - can be completely disabled by compiling with --no-default-features for maximum performance
cookies = ["reqwest/cookies"]
pdf-reports = ["headless_chrome", "urlencoding"]

[dev-dependencies]
httpmock = "0.8"
nix = { version = "0.30", features = ["signal"] }
rustls = "0.23"
serial_test = "3.2"
